--- a/.github/workflows/main_wondercooking.yml
+++ b/.github/workflows/main_wondercooking.yml
@@ -30,7 +30,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r Wondercooking/requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -68,4 +68,18 @@ jobs:
         with:
           app-name: 'Wondercooking'
           slot-name: 'Production'
+
+      - name: Cleaning testing files
+        run: |
+          cd Wondercooking/
+          rm db.sqlite3
+          rm .env
+          cd ..
+
+      - name: Zip artifact for deployment
+        run: |
+          cd Wondercooking/
+          zip release.zip ./* -r
+          cd ..
+          mv Wondercooking/release.zip .
           
