--- a/.github/workflows/wondercooking.yml
+++ b/.github/workflows/wondercooking.yml
@@ -35,6 +35,7 @@ jobs:
           CLOUDINARY_URL: ${{ secrets.CLOUDINARY_URL }}
           DEBUG: 'False'
         run: |
+          python manage.py makemigrations
           python manage.py migrate
 
       - name: Testes
