--- a/.github/workflows/wondercooking.yml
+++ b/.github/workflows/wondercooking.yml
@@ -24,12 +24,49 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Criando ambiente virtual
+        run: |
+          python -m venv .venv
+          source .venv/bin/activate
+
       - name: Instalar dependências do projeto
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Migrações no Neon
+      - name: Rodando localmente e fazendo testes
+        run: |
+          python manage.py makemigrations
+          python manage.py migrate
+          python manage.py runserver &
+          npx cypress run
+
+      - name: Tirando arquivos dos testes
+        run: |
+          rm .env
+          rm cypress.config.js
+          rm package-lock.json
+          rm package.json
+          rm -rf cypress
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: run-tests
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Instalar dependências para migração
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Rodar migrações no banco de produção (Neon)
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           CLOUDINARY_URL: ${{ secrets.CLOUDINARY_URL }}
@@ -38,10 +75,13 @@ jobs:
           python manage.py makemigrations
           python manage.py migrate
 
-      - name: Testes
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          CLOUDINARY_URL: ${{ secrets.CLOUDINARY_URL }}
-          DEBUG: 'False'
-        run: |
-          python manage.py test
+      - name: Deploy para Vercel
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          working-directory: .
+          prod: true
+
+
+      - name: Exibir URL do site
+        run: echo "Site: https://wondercooking.app"
