--- a/.github/workflows/wondercooking.yml
+++ b/.github/workflows/wondercooking.yml
@@ -37,16 +37,20 @@ jobs:
       - name: Instalar dependências JS
         run: npm install
 
-      - name: Rodando localmente e fazendo testes
+      - name: Migrando
         run: |
           python manage.py makemigrations
           python manage.py migrate
-          python manage.py runserver &
-          npx cypress run
+      
+      - name: Testes do Cypress
+        uses: cypress-io/github-action@v6
+        with:
+          start: python manage.py runserver
+          wait-on: 'http://localhost:8000'
+          wait-on-timeout: 60
 
       - name: Tirando arquivos dos testes
         run: |
-          rm .env
           rm cypress.config.js
           rm package-lock.json
           rm package.json
